Accounts now can have the same name